--- a/config.ini
+++ b/config.ini
@@ -6,10 +6,13 @@ inTest = True
 StartMenuDir = C:\ProgramData\Microsoft\Windows\Start Menu
 StartTestDir = test_dir\Start Menu
 ; DBStyle:
-; 0 = Plain
-; 1 = CSV
-; 2 = Another DB
+; 0 = Plain (could be plain .txt file)
+; 1 = CSV [Default]
+; 2 = Another DB (Not yet)
 DBStyle = 1
-; Database File
+; Database File [Our default database: db.csv]
 DBFile = db.csv
-
+; Sensitivity Threshold, Default: 0.8
+; 0 for default,
+; 1 for very sensitive (this boi wouldn't tolerate any difference)
+Sensitivity = 0.8
