--- a/config.ini
+++ b/config.ini
@@ -2,17 +2,27 @@
 ; if Development Stage True,
 ; StartTestDir will be used instead of StartMenuDir
 inTest = True
+
 ; Work Target Directories
 StartMenuDir = C:\ProgramData\Microsoft\Windows\Start Menu
 StartTestDir = test_dir\Start Menu
+
 ; DBStyle:
 ; 0 = Plain (could be plain .txt file)
 ; 1 = CSV [Default]
 ; 2 = Another DB (Not yet)
 DBStyle = 1
+
 ; Database File [Our default database: db.csv]
 DBFile = db.csv
+
 ; Sensitivity Threshold, Default: 0.8
 ; 0 for default,
 ; 1 for very sensitive (this boi wouldn't tolerate any difference)
 Sensitivity = 0.8
+
+; Work Depth, Default: 0
+; Any number for folder or tree depth
+; 0 or leave empty = full scan
+MaxDepth = 0
+
